overflow fix

--- a/src/styles/block/details.scss
+++ b/src/styles/block/details.scss
@@ -1,4 +1,6 @@
 .details {
+  overflow: hidden;
+  padding-bottom: 16px;
   &__card {
     &:not(:last-child) {
       margin-bottom: 40px;
