--- a/src/styles/block/page.scss
+++ b/src/styles/block/page.scss
@@ -28,7 +28,6 @@
 
     color: #fff;
     background-color: $black-color;
-    overflow-x: hidden;
 
     &--with-menu {
       overflow: hidden;
